# amiss

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  THIRD_PARTY_NOTICES.md  action.yml  clippy.toml  deny.toml  release-manifest.digest  release-manifest.json  release-plz.toml
.cargo/: mutants.toml
controller/: Cargo.toml  README.md  clippy.toml  deny.toml
controller/git/: Cargo.toml
controller/git/src/: lib.rs  pack.rs  protocol.rs
controller/git/tests/: fetch.rs
controller/git/tests/internal/: lib.rs  pack.rs  protocol.rs
controller/gitea/: Cargo.toml
controller/gitea-service/: Cargo.toml
controller/gitea-service/src/: config.rs  lib.rs  main.rs  runtime.rs
controller/gitea-service/tests/: config.rs  lane.rs
controller/gitea/src/: adapter.rs  fetch_plan.rs  identity.rs  lib.rs  source.rs
controller/gitea/tests/: adapter.rs  fetch_plan.rs
controller/github/: Cargo.toml
controller/github-service/: Cargo.toml
controller/github-service/src/: config.rs  main.rs  runtime.rs
controller/github-service/tests/: config.rs  lane.rs
controller/github/src/: acquisition.rs  lib.rs
controller/github/tests/: acquisition.rs  adapter.rs
controller/gitlab/: Cargo.toml
controller/gitlab-service/: Cargo.toml
controller/gitlab-service/src/: acquisition.rs  lib.rs  main.rs  objects.rs  runtime.rs
controller/gitlab-service/tests/: config.rs  lane.rs
controller/gitlab/src/: adapter.rs  fetch_plan.rs  identity.rs  lib.rs  model.rs  oidc.rs  snapshot.rs
controller/gitlab/tests/: adapter.rs  controller.rs  fetch_plan.rs  oidc.rs
controller/service/: Cargo.toml
controller/service/src/: delivery.rs  error.rs  evaluation.rs  frame.rs  hash.rs  inbox.rs  lane.rs  launcher.rs  lib.rs  limits.rs  queued.rs  receiver.rs  record.rs  request_body.rs  shutdown.rs  store.rs  worker.rs
controller/service/tests/: config.rs  evaluation.rs  inbox.rs  receiver.rs  worker.rs
controller/src/: acquiring_runner.rs  acquisition.rs  atomic_write_recovery.rs  bootstrap_job.rs  bootstrap_result.rs  bootstrap_runner.rs  clock.rs  file_ledger.rs  identity.rs  ingress.rs  lib.rs  orchestration.rs  plans.rs  provider.rs  webhook.rs
controller/src/bootstrap_job/: controls.rs
controller/src/file_ledger/: format.rs  store.rs  transitions.rs
controller/src/ingress/: binding.rs  policy.rs
controller/src/orchestration/: controller.rs  ledger.rs  model.rs  publication.rs
controller/src/webhook/: body_signature.rs  crypto.rs  error.rs  gitea.rs  github.rs  gitlab.rs  headers.rs  keyring.rs  proof.rs
controller/tests/: acquisition.rs  bootstrap_job.rs  bootstrap_result.rs  bootstrap_runner.rs  file_ledger.rs  flow.rs  identity.rs  ingress.rs  plans.rs  webhook.rs
controller/tests/bootstrap_runner/: acquiring.rs
controller/tests/file_ledger/: capacity.rs  claims.rs  cleanup.rs  locking.rs  persistence.rs  process_locking.rs  support.rs
controller/tests/fixtures/: bootstrap.rs
controller/tests/flow/: claims.rs  delivery.rs  identity.rs  leases.rs  results.rs  support.rs
controller/tests/ingress/: freshness.rs  limits.rs  proof.rs  support.rs
controller/tests/internal/: bootstrap_runner.rs
controller/tests/webhook/: gitea.rs  github.rs  keyring.rs  support.rs
crates/amiss/: Cargo.toml  README.md
crates/amiss-bootstrap/: Cargo.toml  README.md
crates/amiss-bootstrap/src/: build.rs  lib.rs  main.rs  result.rs  supervise.rs
crates/amiss-bootstrap/tests/: acceptance.rs  cli_result.rs  release.rs  result.rs  watchdog.rs
crates/amiss-git/: Cargo.toml  README.md
crates/amiss-git/src/: handle.rs  index.rs  lib.rs  object.rs  pack.rs  repo.rs  resources.rs  unavailable.rs
crates/amiss-git/tests/: boundary.rs  capped.rs  loose.rs  pack.rs  staged.rs  unavailable.rs
crates/amiss-md/: Cargo.toml  LICENSE.md  README.md
crates/amiss-md/src/: accounting.rs  corpus.rs  extract.rs  frontmatter.rs  js.rs  lib.rs  lines.rs  profile.rs
crates/amiss-md/tests/: accounting.rs  conformance.rs  corpus.rs  extract.rs  fixtures.rs  frontmatter.rs  mdx.rs
crates/amiss-scan/: Cargo.toml  README.md
crates/amiss-scan/benches/: adapters.rs  controls.rs  correlation.rs  pipeline.rs
crates/amiss-scan/src/: adoption.rs  correlate.rs  discovery.rs  document.rs  evaluate.rs  feedback.rs  lfs.rs  lib.rs  observe.rs  pipeline.rs  policy.rs  report.rs  request.rs  resolve.rs  resources.rs  scan.rs
crates/amiss-scan/tests/: classify.rs  code_fragments.rs  corpus.rs  correlate.rs  correlation_vectors.rs  determinism.rs  discovery.rs  eligibility.rs  envelope.rs  evaluate.rs  floor.rs  governed.rs  identity.rs  lfs.rs  measure.rs  policy.rs  recorded.rs  report.rs  resolve.rs  scan.rs  surface.rs  wrapper.rs
crates/amiss-wire/: Cargo.toml  README.md
crates/amiss-wire/benches/: wire.rs
crates/amiss-wire/src/: action.rs  controls.rs  de.rs  digest.rs  human.rs  json.rs  lib.rs  manifest.rs  model.rs  report.rs  requests.rs  resolution.rs
crates/amiss-wire/tests/: control_producers.rs  controls.rs  human.rs  manifest.rs  paths.rs  report.rs  requests.rs  resolution.rs  wire.rs
crates/amiss-wrapper/: Cargo.toml
crates/amiss-wrapper/src/: lib.rs  main.rs
crates/amiss-wrapper/tests/: watchdog.rs  wire.rs
crates/amiss/action/: runtime.yml
crates/amiss/src/: invocation.rs  lib.rs  main.rs
crates/amiss/tests/: cli.rs  documentation_contracts.rs  golden.rs  hostile.rs  invocation.rs  no_write.rs  portable.rs  reference_constructor.rs  resolution_contracts.rs  sealed.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: controls.rs  git_index.rs  git_objects.rs  human.rs  json.rs  markdown.rs  requests.rs
fuzz/seeds/controls/: constraint-open.json  constraint.json  policy.json  statement.json
fuzz/seeds/git_index/: small.index
fuzz/seeds/human/: ascii.txt  emoji.txt  unicode.txt
fuzz/seeds/json/: nested.json  numbers.json
fuzz/seeds/requests/: controls.json  evaluation.json  snapshot.json
fuzz/src/: lib.rs
fuzz/tests/: smoke.rs
(+296 files in other folders)
