[package]
name = "amiss-controller-github"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
description = "GitHub pull-request adapter for the Amiss controller"
license = "FSL-1.1-ALv2"
repository = "https://github.com/HardMax71/amiss"
publish = false

[dependencies]
amiss-controller = { path = ".." }
amiss-controller-git = { path = "../git" }
amiss-wire = { path = "../../crates/amiss-wire" }
bytes = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
jsonwebtoken = { version = "10.4", default-features = false, features = ["aws_lc_rs", "use_pem"] }
octocrab = { version = "0.54", default-features = false, features = [
  "default-client",
  "jwt-aws-lc-rs",
  "rustls",
  "rustls-ring",
  "timeout",
] }
percent-encoding = "2"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["net", "rt-multi-thread", "time"] }
url = "2"

[dev-dependencies]
hex = "0.4"
hmac = "0.13"
sha2 = "0.11"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
elided_lifetimes_in_paths = "warn"
trivial_numeric_casts = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"
string_slice = "deny"
disallowed_types = "deny"
disallowed_methods = "deny"
as_conversions = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
cast_precision_loss = "deny"
wildcard_enum_match_arm = "deny"
mem_forget = "deny"
dbg_macro = "deny"
