[package]
name = "amiss-controller-gitlab-service"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
description = "Deployable GitLab merge-train policy lane for the Amiss controller"
license = "FSL-1.1-ALv2"
repository = "https://github.com/HardMax71/amiss"
publish = false

[[bin]]
name = "amiss-controller-gitlab"
path = "src/main.rs"

[[bin]]
name = "amiss-gitlab-service-bootstrap-fixture"
path = "tests/fixtures/bootstrap.rs"
test = false
bench = false

[dependencies]
amiss-bootstrap = { path = "../../crates/amiss-bootstrap" }
amiss-controller = { path = ".." }
amiss-controller-git = { path = "../git" }
amiss-controller-gitlab = { path = "../gitlab" }
amiss-controller-service = { path = "../service" }
amiss-git = { path = "../../crates/amiss-git" }
amiss-wire = { path = "../../crates/amiss-wire" }
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
tokio = { version = "1.53.1", features = ["net", "rt-multi-thread"] }

[dev-dependencies]
amiss-fixtures = { path = "../../crates/amiss-fixtures" }
jsonwebtoken = { version = "10.4", default-features = false, features = [
  "aws_lc_rs",
  "use_pem",
] }
serde_json = "1"
tokio = { version = "1.53.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.3", features = ["util"] }

[lints.rust]
unsafe_code = "forbid"
elided_lifetimes_in_paths = "warn"
trivial_numeric_casts = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"
disallowed_types = "deny"
disallowed_methods = "deny"
as_conversions = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
cast_precision_loss = "deny"
wildcard_enum_match_arm = "deny"
mem_forget = "deny"
dbg_macro = "deny"
