[package]
name = "amiss-bootstrap"
version.workspace = true
edition.workspace = true
description = "Trusted CI wrapper that validates and launches a verified Amiss engine"
license.workspace = true
repository.workspace = true

[dependencies]
amiss-git = { path = "../amiss-git", version = "0.7.0" }
amiss-wire = { path = "../amiss-wire", version = "0.7.0" }
tempfile = "3"

[dev-dependencies]
amiss-fixtures = { path = "../amiss-fixtures" }
tempfile = "3"

[lints]
workspace = true
