[package]
name = "amiss-git"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
amiss-wire = { path = "../amiss-wire" }
crc32fast = "1"
flate2 = "1"
sha1-checked = "0.10"
sha2.workspace = true

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
