[package]
name = "amiss-git"
version.workspace = true
edition.workspace = true
description = "Read-only Git object store behind a no-follow handle boundary, for Amiss"
license.workspace = true
repository.workspace = true

[dependencies]
amiss-wire = { path = "../amiss-wire", version = "0.7.0" }
crc32fast = "1"
flate2 = "1"
fs_at = "0.2"
sha1-checked = "0.10"
sha2.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
amiss-fixtures = { path = "../amiss-fixtures" }
tempfile = "3"

[lints]
workspace = true
