[package]
name = "amiss-md"
version.workspace = true
edition.workspace = true
description = "Document parsers for Amiss, pinned to the CommonMark and GFM corpora"
license.workspace = true
repository.workspace = true
autotests = false

[dependencies]
amiss-wire = { path = "../amiss-wire", version = "0.1.0" }
markdown = "1"

[dev-dependencies]
sha2.workspace = true

[[test]]
name = "accounting"
path = "tests/accounting.rs"

[[test]]
name = "conformance"
path = "tests/conformance.rs"

[[test]]
name = "corpus"
path = "tests/corpus.rs"

[[test]]
name = "extract"
path = "tests/extract.rs"

[[test]]
name = "frontmatter"
path = "tests/frontmatter.rs"

[[test]]
name = "mdx"
path = "tests/mdx.rs"

[lints]
workspace = true
