[package]
name = "amiss-scan"
version.workspace = true
edition.workspace = true
description = "Discovery, reference resolution, correlation, evaluation, and policy for Amiss"
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
amiss-git = { path = "../amiss-git", version = "0.6.1" }
amiss-md = { path = "../amiss-md", version = "0.6.1" }
amiss-wire = { path = "../amiss-wire", version = "0.6.1" }
strum.workspace = true

[dev-dependencies]
amiss-fixtures = { path = "../amiss-fixtures" }
divan = "0.1.21"
dhat = "0.3"
jsonschema = { version = "0.47", default-features = false, features = ["resolve-file"] }
serde_json = "1"
stats_alloc = "0.1.10"
tempfile = "3"

[[bench]]
name = "adapters"
harness = false

[[bench]]
name = "correlation"
harness = false

[[bench]]
name = "controls"
harness = false

[[bench]]
name = "pipeline"
harness = false

[lints]
workspace = true
