[package]
name = "amiss-wire"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
bench = false

[dependencies]
sha2.workspace = true

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "wire"
harness = false

[lints]
workspace = true
