[package]
name = "amiss-wire"
version.workspace = true
edition.workspace = true
description = "Canonical JSON, digest domains, and the machine contracts of Amiss"
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
sha2.workspace = true
strum.workspace = true

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "wire"
harness = false

[lints]
workspace = true
