[package]
name = "amiss"
version.workspace = true
edition.workspace = true
description = "Checks documentation against the repository tree it describes"
documentation = "https://hardmax71.github.io/amiss/"
homepage = "https://hardmax71.github.io/amiss/"
keywords = ["documentation", "ci", "links", "markdown", "drift"]
categories = ["development-tools", "command-line-utilities"]
license.workspace = true
repository.workspace = true

[dependencies]
amiss-git = { path = "../amiss-git", version = "0.6.1" }
amiss-scan = { path = "../amiss-scan", version = "0.6.1" }
amiss-wire = { path = "../amiss-wire", version = "0.6.1" }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["process"] }

[dev-dependencies]
amiss-fixtures = { path = "../amiss-fixtures" }
jsonschema = { version = "0.47", default-features = false, features = ["resolve-file"] }
serde_json = "1"
sha2.workspace = true
strum.workspace = true
tempfile = "3"

[lints]
workspace = true
